# app/models/inbox.rb
@@ -27,16 +27,19 @@
 #  account_id                    :integer          not null
 #  channel_id                    :integer          not null
 #  portal_id                     :bigint
+#  survey_id                     :bigint
 #
 # Indexes
 #
 #  index_inboxes_on_account_id                   (account_id)
 #  index_inboxes_on_channel_id_and_channel_type  (channel_id,channel_type)
 #  index_inboxes_on_portal_id                    (portal_id)
+#  index_inboxes_on_survey_id                    (survey_id)
 #
 # Foreign Keys
 #
 #  fk_rails_...  (portal_id => portals.id)
+#  fk_rails_...  (survey_id => surveys.id)
 #
 
 class Inbox < ApplicationRecord
@@ -56,6 +59,7 @@ class Inbox < ApplicationRecord
 
   belongs_to :account
   belongs_to :portal, optional: true
+  belongs_to :survey, optional: true
 
   belongs_to :channel, polymorphic: true, dependent: :destroy
 
@@ -178,7 +182,8 @@ class Inbox < ApplicationRecord
   def webhook_data
     {
       id: id,
-      name: name
+      name: name,
+      survey_id: survey_id
     }
   end
 
